# sqlalchemy2-practice

./: .gitignore  db.py  main.py  pyproject.toml
