[tool.poetry]
name = "sqlalchemy_practice"
version = "0.1.0"
description = ""
authors = ["Asdrúbal Iván Suárez Rivera <asdrubal.ivan.suarez.rivera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "2"
click = "^8.1.3"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.991"
black = "^22.12.0"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
